--- a/src/main/resources/view/Update_Item_Details.fxml
+++ b/src/main/resources/view/Update_Item_Details.fxml
@@ -1,14 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.UpdateItemDetailsController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.UpdateItemDetailsController">
+   <children>
+      <Label layoutX="183.0" layoutY="20.0" prefHeight="53.0" prefWidth="225.0" text="Update Item details" textFill="#0c8896">
+         <font>
+            <Font name="System Bold Italic" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="49.0" layoutY="83.0" prefHeight="34.0" prefWidth="58.0" text="Item Id" textFill="#0c8896">
+         <font>
+            <Font name="System Bold Italic" size="17.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtDescription" editable="false" layoutX="183.0" layoutY="131.0" prefHeight="30.0" prefWidth="402.0" style="-fx-background-color: #B4B4B4;">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </TextField>
+      <Button fx:id="btnUpdate" layoutX="160.0" layoutY="336.0" mnemonicParsing="false" onAction="#btnUpdate" text="Update" textFill="#0c8896">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Button>
+      <TextField fx:id="txtItemId" layoutX="124.0" layoutY="85.0" prefHeight="30.0" prefWidth="82.0" style="-fx-background-color: #B4B4B4;">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </TextField>
+      <Label layoutX="53.0" layoutY="129.0" prefHeight="34.0" prefWidth="107.0" text="Description" textFill="#0c8896">
+         <font>
+            <Font name="System Bold Italic" size="17.0" />
+         </font>
+      </Label>
+      <Label layoutX="53.0" layoutY="177.0" prefHeight="34.0" prefWidth="107.0" text="Package-Size" textFill="#0c8896">
+         <font>
+            <Font name="System Bold Italic" size="17.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtPackageSize" editable="false" layoutX="183.0" layoutY="180.0" prefHeight="30.0" prefWidth="402.0" style="-fx-background-color: #B4B4B4;">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </TextField>
+      <Label layoutX="53.0" layoutY="219.0" prefHeight="34.0" prefWidth="107.0" text="Unit-Price" textFill="#0c8896">
+         <font>
+            <Font name="System Bold Italic" size="17.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtUnitPrice" editable="false" layoutX="183.0" layoutY="221.0" prefHeight="30.0" prefWidth="402.0" style="-fx-background-color: #B4B4B4;">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </TextField>
+      <Label layoutX="35.0" layoutY="272.0" prefHeight="34.0" prefWidth="144.0" text="Quanity on Hand" textFill="#0c8896">
+         <font>
+            <Font name="System Bold Italic" size="17.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtQuantityOnHand" editable="false" layoutX="183.0" layoutY="275.0" prefHeight="30.0" prefWidth="402.0" style="-fx-background-color: #B4B4B4;">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </TextField>
+      <Button fx:id="btnSearch" layoutX="256.0" layoutY="80.0" mnemonicParsing="false" onAction="#btnSearch" text="Search" textFill="#0c8896">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Button>
+      <Button fx:id="btnBack" layoutX="393.0" layoutY="336.0" mnemonicParsing="false" onAction="#btnBack" text="Back" textFill="#0c8896">
+         <font>
+            <Font name="System Bold Italic" size="18.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
